--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "expo-camera": "~11.2.2",
     "expo-image-picker": "~10.2.2",
     "expo-status-bar": "~1.0.4",
+    "qs": "^6.10.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-pager-view": "5.0.12",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
